    and more than 2 atoms (Dec.22, 2017) (Oleksandr Motornyi, 
    Michele Raynaud, Iurii Timrov, Nathalie Vast, Andrea Dal Corso)

  * Phonons with images wasn't working in v.6.2.1 with old PP files
    containing "&" in the header section (Dec.20, 2017)

  * PWscf in "manypw" mode wasn't working due to a bad IF (Dec.12, 2017)

Incompatible changes in development version:

  * FFT interfaces fwfft, invfft now accept only 'Rho', 'Wave', 'tgWave'.
    Together with FFT descriptor, these options cover all cases.

  * Structure for 'custom' FFT (exx_fft) deleted from exact exchange code,
    FFT descriptor dfftt and a few variabes used instead
    (a different one is still present in GWW)

  * FFT indices nl, nlm, nls, nlsm, moved from their previous location
    (gvect, gvecs) into FFT descriptors (dfft* structures)

  * Development moved to GitLab

New in 6.2.1 version:

  * Spin-polarized SCAN meta-GGA; spin-unpolarized stress for meta-GGA
    (Hsin-Yu Ho and Marcos Calegari Andrade)

  * Interface with Grimme's DFT-D3, as repackaged by Bálint Aradi
    (Miha Gunde and Layla Martins-Samos)
  
  * Phonons for two-dimensional systems (Thibault Sohier et al.)

Problems fixed in 6.2.1 version:

  * PWscf in "driver" mode with i-Pi wasn't working with k-points and
    wasn't honoring options for interpolation - fixed by Przemyslaw Juda
    (r14037)

  * Restart in phonon wasn't working with tetrahedra (r14029)
    and for USPP/PAW at q != 0 (r14034-14036)

  * QM-MM interface with LAMMPS was broken in v.6.2 (r14006-14008)

  * NASTY BUG IN META-GGA WITH LIBXC (tpss, tb09, scan): incorrect results -
    fixed by Hsin-Yu Ho and Marcos Calegari Andrade (r14000, 14004-5, 14027)

  * Electron-phonon with ibrav=0 not working due to a mismatch between
    what is written and what is read in "fildyn" (r13999)

  * Tetrahedra with "old" XML format working again (r13993)

  * Option "-in file" for fermi_proj.x and fermi_velocity.x was not working