@@ -98,7 +98,6 @@ fft_rho.o : ../FFTXlib/fft_helper_subroutines.o
 fft_rho.o : ../FFTXlib/fft_interfaces.o
 fft_rho.o : ../FFTXlib/fft_types.o
 fft_rho.o : control_flags.o
-fft_rho.o : fft_base.o
 fft_rho.o : kind.o
 funct.o : io_global.o
 funct.o : kind.o
