@@ -4661,7 +4661,7 @@ END SUBROUTINE compute_becpsi
     USE io_global,      ONLY : stdout
     USE fft_base,       ONLY : dfftp, dffts, smap, fft_base_info
     USE fft_types,      ONLY : fft_type_init
-    USE recvec_subs,    ONLY : ggen
+    USE recvec_subs,    ONLY : ggen, ggens
 !    USE task_groups,    ONLY : task_groups_init
     !
     !
@@ -4752,7 +4752,8 @@ END SUBROUTINE compute_becpsi
     END IF
     !
     IF (first_data_structure_change) THEN
-       CALL ggen( dfftp, dffts, gamma_only, at, bg )
+       CALL ggen ( dfftp, gamma_only, at, bg )
+       CALL ggens( dffts, gamma_only, at, g, gg, mill, gcutms, ngms )
        allocate( ig_l2g_exx(ngm), g_exx(3,ngm), gg_exx(ngm) )
        allocate( mill_exx(3,ngm), nl_exx(ngm) )
        allocate( nls_exx(size(dffts%nl)) )
