@@ -13,7 +13,9 @@ SUBROUTINE init_run()
   USE symme,              ONLY : sym_rho_init
   USE wvfct,              ONLY : nbnd, et, wg, btype
   USE control_flags,      ONLY : lmd, gamma_only, smallmem, ts_vdw
-  USE gvect,              ONLY : gstart ! to be comunicated to the Solvers if gamma_only
+  USE gvect,              ONLY : g, gg, mill, &
+       gstart ! to be comunicated to the Solvers if gamma_only
+  USE gvecs,              ONLY : gcutms, ngms
   USE cell_base,          ONLY : at, bg, set_h_ainv
   USE cellmd,             ONLY : lmovecell
   USE dynamics_module,    ONLY : allocate_dyn_vars
@@ -25,7 +27,7 @@ SUBROUTINE init_run()
   USE bp,                 ONLY : allocate_bp_efield, bp_global_map
   USE fft_base,           ONLY : dfftp, dffts
   USE funct,              ONLY : dft_is_hybrid
-  USE recvec_subs,        ONLY : ggen
+  USE recvec_subs,        ONLY : ggen, ggens
   USE wannier_new,        ONLY : use_wannier    
   USE dfunct,             ONLY : newd
   USE esm,                ONLY : do_comp_esm, esm_init
@@ -63,10 +65,11 @@ SUBROUTINE init_run()
   ! ... generate reciprocal-lattice vectors and fft indices
   !
   IF( smallmem ) THEN
-     CALL ggen( dfftp, dffts, gamma_only, at, bg, no_global_sort = .TRUE. )
+     CALL ggen( dfftp, gamma_only, at, bg, no_global_sort = .TRUE. )
   ELSE
-     CALL ggen( dfftp, dffts, gamma_only, at, bg )
+     CALL ggen( dfftp, gamma_only, at, bg )
   END IF
+  CALL ggens( dffts, gamma_only, at, g, gg, mill, gcutms, ngms )
   if (gamma_only) THEN
      ! ... Solvers need to know gstart
      call export_gstart_2_cg(gstart); call export_gstart_2_davidson(gstart)
